# media_service

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
docker_compose/: app.yaml  storage.yaml
src/: cron.py  main.py
src/application/: router.py
src/application/api/: __init__.py  api.py  schemas.py
src/exceptions/: base.py  media.py
src/infrastructure/: converters.py  di.py
src/infrastructure/cloude_s3/: cloude.py
src/infrastructure/migrations/: env.py
src/infrastructure/models/: __init__.py  base.py  media.py
src/infrastructure/repositories/: db_helper.py  media.py
src/settings/: config.py
tests/: conftest.py  test_api.py
