[tool.poetry]
name = "media-service"
version = "0.1.0"
description = ""
authors = ["Vasiliy08 <vasiliy.levin.90@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
httpx = "^0.27.2"
python-multipart = "^0.0.17"
aiofiles = "^24.1.0"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
punq = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
